# adhd-dev-brain

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  README.md  config.yaml  pyproject.toml
.beads/: interactions.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: bd-wip-gate.sh  lint-python.sh  stop-gate.sh
.github/workflows/: ci.yml
docs/: adhd-project-dashboard-prd.md  architecture.md  quality-standards.md
src/adhd_dash/: __init__.py  config.py  db.py  discovery.py  git_remote.py  github_client.py  main.py  models.py  polling.py  projects.py  staleness.py
src/adhd_dash/adapters/: bd_adapter.py  br_adapter.py  models.py
src/adhd_dash/api/: __init__.py  v1.py
tests/: test_bd_adapter.py  test_br_adapter.py  test_config.py  test_discovery.py  test_git_remote.py  test_github_client.py  test_health.py  test_main.py  test_models.py  test_polling.py  test_project_status_staleness.py  test_projects_api.py  test_staleness.py
