[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "adhd-dash"
version = "0.1.0"
description = "ADHD-friendly project dashboard: staleness/status aggregation across Beads-tracked and GitHub-tracked projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "sqlmodel==0.0.39",
    "apscheduler==3.11.3",
    "asyncssh==2.24.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "time-machine==3.2.0",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-PyYAML==6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adhd_dash"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

# apscheduler==3.11.3 ships no py.typed marker and no types-apscheduler stub
# package exists (checked: not on PyPI) -- ignore-missing-imports is the
# correct escape hatch here, not a workaround for our own code.
[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
